@@ -24,7 +24,9 @@ omxCheckIdentical(mxEval(D, model), as.matrix(c(1,2,3)))
 A <- mxMatrix('Full', 2, 2, values = c(1,2,3,4), byrow = TRUE, name = 'A')
 B <- mxAlgebra(A + A, name = 'B')
 C <- mxMatrix('Full', 2, 2, labels = c('B[2,2]', 'B[2,1]', 'B[1,2]', 'B[1,1]'), byrow = TRUE, name = 'C')
-model <- mxModel('model', A, B, C)
+D <- mxMatrix('Full', 1, 2, labels = c('B[2,2]', 'B[2,1]'), byrow = TRUE, name = 'D')
+E <- mxAlgebra(t(D), name = 'E')
+model <- mxModel('model', A, B, C, D, E)
 model <- mxRun(model)
 omxCheckIdentical(mxEval(C, model), matrix(rev(c(1,2,3,4)) * 2, 2, 2, byrow = TRUE))
 nv <- 2
